# cicd-tp

./: Cargo.toml  Dockerfile  README.md  cluster.yaml  docker-compose.yml
.github/workflows/: build.yml  check.yml  ci.yml  codebase.yml  docker_build.yml  release.yml  testing.yml
manifests/: Chart.yaml  README.md  values.yaml
manifests/base/: kustomization.yaml
manifests/base/cityapi/: deployment.yaml
manifests/base/postgresql/: deployment.yaml
manifests/manual/: README.md  appset.yaml
manifests/templates/: _helpers.tpl  db.yaml  deployment.yaml  ingress.yaml  populate_job.yaml  service.yaml
postgres_init/: db.sql
services/grafana/: grafana.ini
services/grafana/dashboards/: cicd-tp.json
services/prometheus/: prometheus.yml
src/: cli.rs  db.rs  endpoints.rs  main.rs  models.rs  tests.rs  web.rs
