[package]
name = "cicd-tp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["migrate", "postgres", "runtime-tokio"] }
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }
clap = { version = "4.5", features = ["derive","env"] }

[dev-dependencies]
http-body-util = "0.1.3"
hyper = "1.6.0"
tower = "0.5.2"
