[package]
name = "cicdtp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["migrate", "postgres", "runtime-tokio"] }
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }
clap = { version = "4.5", features = ["derive","env"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "reqwest"] }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
axum-prometheus = "0.8.0"

[dev-dependencies]
http-body-util = "0.1.3"
hyper = "1.6.0"
tower = "0.5.2"
